# validator-bonds

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  ANNOUNCEMENTS_INFO.md  Anchor.toml  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_SUBSCRIPTION_SDK.md  IMPLEMENTATION_PLAN_SUB_VER.md  NOTIFICATIONS.md  PLAN.md  README.md  REVIEW.md  SKILL_AUDIT.md  SUMMARY.md  Test.toml  Trident.toml  V2_PLAN.md  eslint.config.cjs  jest.config.bankrun.js  jest.config.test-validator.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  report_chart.py  rust-toolchain.toml  settlement-config.yaml  tsconfig.build.json  tsconfig.json  txtx.yml
.buildkite/: claim-settlements.yml  close-settlements.yml  collect-bonds.yml  copy-parsed-snapshot.yml  fetch-and-parse-snapshot.yml  fetch-snapshot.yml  fund-settlements.yml  generate-merkle-trees.yml  init-settlements.yml  merge-stakes.yml  prepare-bid-distribution.yml  prepare-bid-psr-distribution.yml  prepare-bidding.yml  prepare-bids-distribution.yml  prepare-claims.yml  prepare-institutional-distribution.yml  prepare-protected-events.yml  prepare-snapshots.yml  process-claims.yml  prune-snapshots.yml  sanity-bid-distribution.yml  sanity-bid-psr-distribution.yml  sanity-institutional-distribution.yml  scheduler.yml  (+6 more)
api/: Cargo.toml  README.md
api/src/: api_docs.rs  dto.rs  error.rs  lib.rs  metrics.rs  rate_limit.rs  routes.rs
api/src/handlers/: bonds.rs  cli_announcements.rs  cli_usage.rs  docs.rs  mod.rs  protected_events.rs
api/src/repositories/: bond.rs  cli_announcement.rs  cli_usage.rs  common.rs  mod.rs  protected_events.rs
api/tests/: http_behavior.rs
bid-distribution/: Cargo.toml
bid-distribution/src/: lib.rs  sam_meta.rs  settlement_claims.rs  settlement_config.rs
bonds-collector/: Cargo.toml  README.md
bonds-collector/src/commands/: bonds.rs  common.rs
common-rs/: Cargo.toml
common-rs/src/: bond_products.rs  bonds.rs  cli_result.rs  config.rs  constants.rs  dto.rs  funded_bonds.rs  lib.rs  settlement_claims.rs  settlements.rs  stake_accounts.rs  utils.rs  utils_rpc_retry.rs
insurance-engine/: Cargo.toml
insurance-engine/src/: insurance_claims.rs  insured_events.rs  lib.rs  merkle_tree.rs  merkle_tree_collection.rs  utils.rs
programs/validator-bonds/: Cargo.toml  ON_CHAIN_ANALYSIS.md  README.md  build.rs
programs/validator-bonds/src/: checks.rs  constants.rs  error.rs  lib.rs
programs/validator-bonds/src/events/: bond.rs  bond_product.rs  config.rs  mod.rs  settlement.rs  settlement_claim.rs  stake.rs
programs/validator-bonds/src/instructions/: mod.rs
programs/validator-bonds/src/instructions/bond/: configure_bond.rs  configure_bond_with_mint.rs  deposit_bond.rs  fund_bond.rs  init_bond.rs  mint_bond.rs  mod.rs
programs/validator-bonds/src/instructions/bond_product/: configure_bond_product.rs  init_bond_product.rs  mod.rs
programs/validator-bonds/src/instructions/config/: configure_config.rs  emergency_pause.rs  init_config.rs
programs/validator-bonds/src/instructions/settlement/: cancel_settlement.rs  claim_settlement.rs  close_settlement.rs  fund_settlement.rs  init_settlement.rs  mod.rs  swap_settlement_stake.rs  upsize_settlement_claims.rs
programs/validator-bonds/src/instructions/stake/: merge.rs  merge_stake.rs  reset.rs  reset_stake.rs  withdraw_stake.rs
programs/validator-bonds/src/instructions/v1/: claim_settlement_v1.rs  close_settlement_claim_v1.rs  close_settlement_v1.rs  mod.rs  settlement_claim_v1.rs  tree_node_v1.rs
programs/validator-bonds/src/instructions/withdraw/: cancel_withdraw_request.rs  claim_withdraw_request.rs  init_withdraw_request.rs  mod.rs  withdraw_deposit.rs
programs/validator-bonds/src/state/: bond.rs  bond_product.rs  config.rs  mod.rs  settlement.rs  settlement_claim.rs  settlement_claims.rs  withdraw_request.rs
programs/validator-bonds/src/utils/: bitmap.rs  merkle_proof.rs  stake.rs
settlement-distributions/bid-distribution/: Cargo.toml  README.md  fetch-scenario-fixtures.sh
settlement-distributions/bid-distribution/src/: apy_api.rs  lib.rs  rewards.rs  sam_meta.rs  settlement_claims.rs  settlement_config.rs  ssi.rs  test_settlement_claims.rs
settlement-distributions/bid-distribution/src/generators/: bidding.rs  fee_optimizer.rs  mod.rs  psr_events.rs  sam_penalties.rs  tests.rs
settlement-distributions/bid-distribution/tests/fixtures/: golden_settlement.json
settlement-distributions/bid-psr-distribution/: Cargo.toml  README.md
settlement-distributions/bid-psr-distribution/src/: lib.rs  merkle_tree_collection.rs  protected_events.rs  rewards.rs  settlement_collection.rs  settlement_config.rs  settlement_generator.rs  stake_meta_index.rs  utils.rs
settlement-distributions/institutional-distribution/: Cargo.toml  README.md
settlement-distributions/institutional-distribution/src/: custom_deserialize.rs  institutional_payouts.rs  lib.rs  settlement_config.rs  settlement_generator.rs
settlement-distributions/institutional-distribution/tests/fixtures/: output-marinade-payouts.json  output-prime-payouts.json
settlement-distributions/institutional-psr-distribution/: Cargo.toml  README.md
settlement-distributions/institutional-psr-distribution/src/: institutional_psr_payouts.rs  lib.rs  settlement_generator.rs
settlement-distributions/merkle-generator/: Cargo.toml
settlement-distributions/merkle-generator/src/: lib.rs  merkle_generator.rs
settlement-distributions/settlement-common/: Cargo.toml  README.md
settlement-distributions/settlement-common/src/: lib.rs  merkle_tree_collection.rs  protected_events.rs  revenue_expectation_meta.rs  settlement_collection.rs  settlement_config.rs  settlement_details.rs  utils.rs
settlement-distributions/settlement-common/tests/: settlement_details.rs
snapshot-parser/: Cargo.toml
snapshot-parser/src/: jito_mev.rs  lib.rs  stake_meta.rs  validator_meta.rs
trident-tests/fuzz_tests/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/: accounts_snapshots.rs  common.rs  fuzz_instructions.rs  test_fuzz.rs
(+288 files in other folders)
