[workspace]
members = [
    "api",
    "common-rs",
    "merkle-tree",
    "programs/*",
    "validator-bonds-cli",
    "settlement-pipelines",
    "settlement-distributions/bid-distribution",
    "settlement-distributions/bid-psr-distribution",
    "trident-tests/fuzz_tests"
]
resolver = "1"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[workspace.dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false }
assert_matches = "1.4.0"
anyhow = "1.0.82"
arbitrary = "1.3.0"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.1.11", features = ["derive", "env"] }
default-env = "0.1.1"
env_logger = "0.10.0"
fast-math = "0.1.1"
futures = "0.3.29"
gcp-bigquery-client = "0.17.1"
hex = "0.4.3"
honggfuzz = "0.5.56"
log = "0.4.14"
merkle-tree = { path = "./merkle-tree" }
regex = "1.10.4"
rust_decimal = { version = "1.26", features = ["db-postgres"] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.8"
bid-psr-distribution = { path = "settlement-distributions/bid-psr-distribution" }
snapshot-parser-types = { git = "https://github.com/marinade-finance/solana-snapshot-parser", branch = "master" }
shellexpand = "3.1.0"
solana-account-decoder = "1.17.22"
solana-accounts-db = "=1.17.22"
solana-clap-utils = "1.17.22"
solana-cli-config = "1.17.22"
solana-client = "=1.17.22"
solana-ledger = "=1.17.22"
solana-logger = "1.17.22"
solana-program = "=1.17.22"
solana-runtime = "=1.17.22"
solana-sdk = "=1.17.22"
solana-security-txt = "1.1.1"
solana-transaction-executor = { git = "https://github.com/marinade-finance/solana-transaction-executor", branch = "master" }
solana-transaction-builder = { git = "https://github.com/marinade-finance/solana-transaction-builder", branch = "main" }
solana-transaction-builder-executor = { git = "https://github.com/marinade-finance/solana-transaction-builder", branch = "main" }
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3" }
trident-client = "0.7.0"
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
validator-bonds = { path = "./programs/validator-bonds" }
validator-bonds-common = { path = "./common-rs" }
warp = { version = "0.3", features = ["compression-gzip"] }
