[workspace]
members = [
    "api",
    "common-rs",
    "merkle-tree",
    "programs/*",
    "bonds-collector",
    "settlement-pipelines",
    "settlement-distributions/bid-distribution",
    "settlement-distributions/bid-psr-distribution",
    "settlement-distributions/institutional-distribution"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[workspace.dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1" }
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
fast-math = "0.1.1"
futures = "0.3.29"
gcp-bigquery-client = "0.17.1"
hex = "0.4.3"
log = "0.4.14"
merkle-tree = { path = "./merkle-tree" }
openssl = "0.10.72"
postgres-openssl = "0.5.1"
regex = "1.10.4"
reqwest = "0.11.22"
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
rust_decimal_macros = "1.37.1"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.8"
bid-psr-distribution = { path = "settlement-distributions/bid-psr-distribution" }
snapshot-parser-validator-cli = { git = "https://github.com/marinade-finance/solana-snapshot-parser", tag = "solana-2.3.x" }
shellexpand = "3.1.0"
solana-account-decoder = "2.3.13"
solana-account-info = "2.3.0"
solana-cli-output = "2.3.13"
solana-client = "2.3.13"
solana-instructions-sysvar = "2.2.2"
solana-program = "2.3.0"
solana-pubkey = "2.3.0"
solana-sdk = "2.3.1"
solana-security-txt = "1.1.1"
solana-transaction-executor = { git = "https://github.com/marinade-finance/solana-transaction-executor", tag = "solana-2.3.x" }
solana-transaction-builder = { git = "https://github.com/marinade-finance/solana-transaction-builder", tag = "solana-2.3.x" }
solana-transaction-builder-executor = { git = "https://github.com/marinade-finance/solana-transaction-builder", tag = "solana-2.3.x" }
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3" }
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
validator-bonds = { path = "./programs/validator-bonds" }
validator-bonds-common = { path = "./common-rs" }
warp = { version = "0.3", features = ["compression-gzip"] }
