[workspace]
members = [
    "api",
    "common-rs",
    "merkle-tree",
    "programs/*",
    "bonds-collector",
    "settlement-pipelines",
    "settlement-distributions/bid-distribution",
    "settlement-distributions/settlement-common",
    "settlement-distributions/institutional-distribution",
    "settlement-distributions/merkle-generator"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[workspace.dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1" }
anyhow = "1.0.102"
bincode = "1.3.3"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
env_logger = "0.11.10"
fast-math = "0.1.1"
futures = "0.3.29"
# TODO: are we able to upgrade the gcp?
gcp-bigquery-client = "0.17.1"
hex = "0.4.3"
log = "0.4.29"
merkle-tree = { path = "./merkle-tree" }
openssl = "0.10.76"
postgres-openssl = "0.5.3"
regex = "1.12.3"
reqwest = "0.13.2"
rust_decimal = { version = "1.41.0", features = ["db-postgres"] }
rust_decimal_macros = "1.40.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.33"
settlement-common = { path = "settlement-distributions/settlement-common" }
snapshot-parser-validator-cli = { git = "https://github.com/marinade-finance/solana-snapshot-parser", tag = "solana-2.3.x" }
shellexpand = "3.1.2"
solana-account-decoder = "3.1.11"
solana-account-info = "3.1.1"
solana-cli-output = "3.1.11"
solana-client = "3.1.11"
solana-instructions-sysvar = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-security-txt = "1.1.2"
solana-transaction-executor = { git = "https://github.com/marinade-finance/solana-transaction-executor", tag = "solana-2.3.x" }
solana-transaction-builder = { git = "https://github.com/marinade-finance/solana-transaction-builder", tag = "solana-2.3.x" }
solana-transaction-builder-executor = { git = "https://github.com/marinade-finance/solana-transaction-builder", tag = "solana-2.3.x" }
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3" }
# can we upgrade utoipa to 5.4.0? What are the breaking changes?
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
validator-bonds = { path = "./programs/validator-bonds" }
validator-bonds-common = { path = "./common-rs" }
warp = { version = "0.3", features = ["compression-gzip"] }
