[package]
name = "bonds-collector"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "bonds-collector"
path = "src/bin/cli.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
solana-client = { workspace = true }
rust_decimal = { workspace = true }
validator-bonds = { workspace = true }
validator-bonds-common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
