[package]
name = "validator-bonds-common"
version = "0.0.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
tokio = {workspace = true}
validator-bonds = { workspace = true }
