[[bin]]
name = "insurance-engine-cli"
path = "src/bin/cli.rs"

[package]
name = "insurance-engine"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.190"
serde_json = "1.0.108"
bincode = "1.3.3"
snapshot-parser = { path = "../snapshot-parser" }
