[[bin]]
name = "institutional-psr-distribution-cli"
path = "src/bin/cli.rs"

[package]
name = "institutional-psr-distribution"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bid-psr-distribution = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
merkle-tree = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-float"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snapshot-parser-types = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
