[package]
name = "settlement-common"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
merkle-tree = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-float"] }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snapshot-parser-validator-cli = { workspace = true }
solana-sdk = { workspace = true }
utoipa = { workspace = true }
